patient/css/booking.css
/* ... */
.disabled-element {
    cursor: default;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.disabled-element .disabled-element-target {
    opacity: .4;
}

.disabled-element-error {
    color: rgb(70, 70, 70);
    font-size: 2em;
    font-weight: 600;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    display: flex;
    height: 100%;
    align-items: center;
    text-align: center;
}

#appointment-date-display {
    font-size: 1.5rem;
}

#appointment-time-display {
    font-size: 1.2rem;
}

.required::after {
    content: " *";
}

.preview-details-container {
    display: flex;
    width: 100%;
    margin-bottom: 1rem;
}

.preview-detail-label {
    color: silver;
}

.preview-detail {
    color: #707070;
    font-weight: 700;
}

.bg-light-orange {
    background-color: #fbc98d;
}

.bg-dark-orange {
    background-color: #f7941c;
}

#show-more-link {
    color: #0080ff;
    text-decoration: underline;
    cursor: pointer;
}

#medical-condition-description .close {
    font-size: 1.4rem;
}

#medical-condition-description .modal-body {
    color: #707070;
}

#medical-condition-description .modal-sm {
    max-width: 400px;
}

#medical-condition-description .modal-header {
    border-bottom: 1px solid silver;
}

